python-netcat-app/k8s/kustomize/app/base/2-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: python-netcat-app
spec:
  selector:
    app: test-netcat
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
