python-netcat-app/k8s/kustomize/app/base/3-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: python-netcat-app
spec:
  to:
    kind: Service
    name: python-netcat-app
    weight: 100
  port:
    targetPort: 5000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
